fix: search should not be overflowing

--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ code {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 #search .home {
